# markata-slides

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  markata.toml  pyproject.toml  requirements.txt  requirements_dev.txt  sample.md  setup.cfg  setup.py
.github/workflows/: release.yml
markata_slides/: __init__.py  __main__.py  cli.py  slides.py
