[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markata-slides"
dynamic = ["version"]
description = "None"
readme = "README.md"
authors = [
    { name = "Waylon Walker" },
]
keywords = [
    "None",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]
dependencies = [
    "markata",
    "markdown-it-py[plugins]",
    "mdit-py-plugins",
]

[project.license]
file = "LICENSE"


[tool.hatch.envs.default]
dependencies = [
    "black",
    "bump2version",
    "flake8",
    "interrogate",
    "mypy",
    "isort",
    "seed-isort-config",
]

[project.optional-dependencies]
dev = [
    "black",
    "bump2version",
    "flake8",
    "interrogate",
    "mypy",
    "isort",
    "seed-isort-config",
]

[project.scripts]
markata-slides = "markata_slides.cli:run"

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=markata --cov=tests"
no-cov = "cov --no-cov"
lint = "flake8 markata_slides"
format = "black --check markata_slides"
sort-imports = "isort markata_slides"
build-docs = "markata build"
lint-test = [
 "lint",
 "format",
 "seed-isort-config",
 "sort-imports",
 "cov",
]
test-lint = "lint-test"

[project.urls]
Homepage = "https://github.com/waylonwalker/Markata Slides"

[tool.hatch.version]
path = "markata_slides/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/markata_slides",
]
